--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "sweetalert2": "^10.15.5",
     "web-vitals": "^1.1.0"
   },
+  "proxy": "http://localhost:8181",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
